attached_assets/Pasted--Executing-task-C-Users-mweny-platformio-penv-Scripts-p_1781717613986.txt
 *  Executing task: C:\Users\mweny\.platformio\penv\Scripts\platformio.exe run 

Processing esp32doit-devkit-v1 (platform: espressif32; board: esp32doit-devkit-v1; framework: arduino)
--------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (7.0.1) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.41100.0 (4.11.0) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 33 compatible libraries
Scanning dependencies...
Dependency Graph
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio\build\esp32doit-devkit-v1\src\main.cpp.o
Building .pio\build\esp32doit-devkit-v1\bootloader.bin
Generating partitions .pio\build\esp32doit-devkit-v1\partitions.bin
esptool.py v4.11.0
Creating esp32 image...
Merged 1 ELF section
Successfully created esp32 image.
Compiling .pio\build\esp32doit-devkit-v1\lib285\Wire\Wire.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\FrameworkArduino\Esp.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\FrameworkArduino\FirmwareMSC.cpp.o
Compiling .pio\build\esp32doit-devkit-v1\FrameworkArduino\FunctionalInterrupt.cpp.o
In file included from src/main.cpp:19:
src/motor.h: In function 'void initESC()':
src/motor.h:105:5: error: 'ledcAttach' was not declared in this scope
     ledcAttach(PIN_ESC, PWM_FREQ, PWM_RESOLUTION);
     ^~~~~~~~~~
src/motor.h:105:5: note: suggested alternative: 'ledcAttachPin'
     ledcAttach(PIN_ESC, PWM_FREQ, PWM_RESOLUTION);
     ^~~~~~~~~~
     ledcAttachPin
*** [.pio\build\esp32doit-devkit-v1\src\main.cpp.o] Error 1
=================== [FAILED] Took 13.22 seconds ===================

 *  The terminal process "C:\Users\mweny\.platformio\penv\Scripts\platformio.exe 'run'" terminated with exit code: 1. 
